aligning feature legend and other fixes

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -248,6 +248,8 @@ input[type="submit"] {
     /* gap: 0.3125rem; */
     gap: 1;
     justify-content: space-between;
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
   }
   
   .svg-grid-inclusion,
@@ -256,18 +258,21 @@ input[type="submit"] {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     text-align: center;
-    gap: 0.2rem;
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
+
   }
  
   
   .svg-grid-long-skipping {
     display: grid;
     flex-direction: row;
-    gap: 0.2rem;
+    gap: 0.5rem;
     width:50%;
     margin-left: auto; /* This will push the grid to the right */
 
   } .bottom{
+    margin-top:0.5rem ;
     display: flex;
     flex-direction: row;
     gap: 0.3125rem;
@@ -284,8 +289,8 @@ input[type="submit"] {
   .feature-long-svg {
     border: 1px solid black;
     /* width:50%; */
-    width: 11.225vw;
-    height: 2.1vw;
+    width: 11.3vw;
+    height: 2.3vw;
     box-sizing: border-box;
     border-radius: 0.3125rem;
     object-fit: fill;
@@ -294,8 +299,8 @@ input[type="submit"] {
   
   .feature-svg {
     border: 2px solid black;
-    width: 5.5vw;
-    height: 2.1vw;
+    width: 5.6vw;
+    height: 2.3vw;
     box-sizing: border-box;
     border-radius: 0.3125rem;
     object-fit: fill;
